# SCOPE

./: README.md
scope-backend/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scope-backend/app/api/routes/: __init__.py  analytics.py  chatbot.py  complaints.py
scope-backend/app/chatbot/: agent.py  tools.py
scope-backend/app/core/: config.py  security.py
scope-backend/app/ml/: model.py
scope-backend/app/models/domain/: complaint.py  user.py
scope-backend/app/models/schemas/: complaint.py
scope-backend/app/services/: analytics_service.py  complaint_service.py
scope-backend/data/: complaints-small.csv
scope-frontend/: README.md  middleware.ts  package-lock.json  package.json
scope-frontend/app/: layout.tsx  page.tsx
scope-frontend/app/(dashboard)/: layout.tsx
scope-frontend/app/(dashboard)/chat/: page.tsx
scope-frontend/app/(dashboard)/complaints/: page.tsx
scope-frontend/app/(dashboard)/dashboard/: page.tsx
scope-frontend/app/(dashboard)/settings/: page.tsx
scope-frontend/app/(dashboard)/users/: page.tsx
scope-frontend/app/api/v1/complaints/: route.ts
scope-frontend/app/api/v1/revalidate/: route.ts
scope-frontend/app/login/: page.tsx
scope-frontend/components/dashboard/: BasicStats.tsx  CategoryChart.tsx
scope-frontend/components/home/: features-section.tsx  hero-section.tsx  how-it-works-section.tsx
scope-frontend/components/layout/: logout-button.tsx  navbar.tsx  sidebar.tsx
scope-frontend/lib/: api-utils.ts  api.ts
scope-frontend/types/: index.ts
(+13 files in other folders)
